{{$NEXT}}

0.028     2016-09-29 15:04:43 EDT
  - Regenerated files no longer need to be allowed in [Git::Check] and [Git::Commit] on release

0.027     2016-09-29 13:50:21 EDT
  - Use [Regenerate] instead of [CopyFilesFromBuild] to regenerate files in root
  - Because of this, files previously copied from the build to the repository
    during `dzil build`, `dzil test`, or `dzil release` will now require running
    `dzil regenerate` to update.

0.026     2016-07-22 02:07:45 EDT
  - Bump required version of [Test::ReportPrereqs] for Module::Metadata version extractor option

0.025     2016-07-21 14:37:00 EDT
  - Generate CONTRIBUTING.md in build and copy from build to root
  - Add basic bundle and minter tests
  - Add perl 5.24 to travis config in minting profile

0.024     2016-05-02 14:25:27 EDT
  - Use Module::Metadata as the version_extractor for Test::ReportPrereqs if
    ExtUtils::MakeMaker is not the installer

0.023     2016-05-02 13:33:42 EDT
  - Add [MetaConfig] and [Test::ReportPrereqs]

0.022     2016-03-14 17:38:19 EDT
  - Use [RunExtraTests] instead of [ExtraTests], so xt/ tests will not be
    copied to t/ in the released distribution.

0.021     2015-11-13 13:24:55 EST
  - Add PluginRemover role to allow -remove option

0.020     2015-09-18 10:10:44 EDT
  - Update copied files on build instead of release
  - Don't add self to develop-requires

0.019     2015-09-08 18:24:07 EDT
  - Generate INSTALL document
  - Add CONTRIBUTING.md to minting profile, and exclude root-level CONTRIBUTING
    documents from distribution gathering
  - Allow setting an empty value for github_user to use [GithubMeta] default

0.018     2015-09-02 19:03:32 EDT
  - Allow for version rewriting in script or bin in git commits

0.017     2015-09-02 01:01:32 EDT
  - Exclude both installer files from Git::GatherDir

0.016     2015-08-31 16:14:04 EDT
  - Allow [ModuleBuildTiny::Fallback] as installer

0.015     2015-08-28 18:21:03 EDT