@@ -54,7 +54,6 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  format = %-9v %{yyyy-MM-dd HH:mm:ss VVV}d%{ (TRIAL RELEASE)}T
  [Git::Commit]
  add_files_in = /
- allow_dirty_match = ^(?:lib|script|bin)/
  allow_dirty = dist.ini
  allow_dirty = Changes
  allow_dirty = README.pod
